<resources>
    <string name="app_name">Quickduel</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Create new account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_new">Create new account</string>
    <string name="action_register">Register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Username must not contain an \@</string>
    <string name="password_not_match">Passwords doesn\'t match</string>
    <string name="login_failed">"Login failed: Invalid username or password"</string>
    <string name="register_failed">"Creating new account failed"</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_got_it">Got it</string>

    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="dialog_sign_out_title">Are you sure you want to sign out?</string>

    <!--navbar-->
    <string name="title_games">Games</string>
    <string name="title_friends">Friends</string>
    <string name="title_recentGames">Recent</string>
    <string name="title_challenges">Challenges</string>
    <string name="user_id">User-Id</string>
    <string name="send_invite">Send Invite</string>

    <string name="friend_request_to_id">Send friend request to user with id %1$s</string>

    <!--challenges-->
    <string name="invite_msg_placeholder">invited you to a game</string>
    <string name="button_challenge_acc_text">Accept</string>
    <string name="button_challenge_decl">Decline</string>
    <string name="dialog_decline_challenge_msg1">Are you sure you want to decline the challenge from&#160;</string>
    <string name="dialog_decline_challenge_msg2">\?</string>
    <string name="dialog_decline_challenge_dont_ask">Don\'t ask anymore</string>

    <!--games-->
    <string name="games_title">Current Games</string>
    <string name="player_names_placeholder">You vs IDK</string>
    <string name="player_names">You vs %1$s</string>
    <string name="game_type">Gametype</string>
    <string name="your_turn">Your Turn</string>
    <string name="other_player_turn">Wait for %1$s…</string>

    <!--tictactoe-->
    <string name="title_tic_tac_toe">TicTacToe</string>
    <string name="player_you">You</string>
    <string name="button_give_up_text">Give up</string>
    <string name="action_your_turn">Your turn</string>
    <string name="action_wait_text">Waiting for %1$s…</string>
    <string name="field_not_empty">This field is not empty</string>
    <string name="not_your_turn">It\'s not your turn</string>
    <string name="game_is_over">The game is over</string>
    <string name="dialog_give_up_msg">Are you sure you want to give up this game?</string>

    <!--compass-->
    <string name="title_compass">Compass</string>
    <string name="compass_location_request_dialog_title">Location permission needed</string>
    <string name="compass_location_request_dialog_msg">This game requires your location to determine if your device is oriented correctly.</string>
    <string name="compass_location_denied_dialog_title">Location services not available</string>
    <string name="compass_location_denied_dialog_msg">The location services are not available. Go in your device settings and make sure you have enabled the location permission for this app and the location services are enabled.</string>
    <string name="compass_no_internet_dialog_title">Loading locations failed</string>
    <string name="compass_no_internet_dialog_msg">Ensure you Wi-Fi or mobile data is enabled.</string>
    <string name="compass_no_sensor_dialog_title">No rotation sensor found</string>
    <string name="compass_no_sensor_dialog_msg">Your device doesn\'t have a rotation sensor which is required for this game to work.</string>
    <string name="compass_loading_locations">Loading locations…</string>
    <string name="compass_waiting_for_opponent">You\'ve all locations found. Now wait for %1$s to complete</string>
    <string name="compass_hint">Wrong direction. Rotate your device %1$s</string>
    <string name="compass_hint_clockwise">clockwise</string>
    <string name="compass_hint_counterclockwise">counterclockwise</string>

    <string name="ending_win">Congrats! You win</string>
    <string name="ending_lose">Booh! You lose</string>
    <string name="ending_draw">It\'s a draw</string>

    <!--NewGameScreen-->
    <string-array name="new_game_gametypes">
        <item>TicTacToe</item>
        <item>Compass</item>
        <item>Mental Arithmetics</item>
        <item>Steps Game</item>
    </string-array>
    <string-array name="step_game_time_options">
        <item>debug</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--notifications-->
    <string name="default_notification_channel_id">CC_GD_C</string>
    <string name="default_message_thing">You have a new message: %1$s</string>
    <string name="msg_subscribed">You have subscribed to messages</string>
    <string name="msg_subscribe_failed">You have failed to subscribe to messages</string>
    <string name="notify_new_friend_title">New Friend</string>
    <string name="notify_new_friend_msg">you have a new friend request</string>
    <string name="notify_acc_friend_title">Accepted Friend</string>
    <string name="notify_acc_friend_msg">a friend request was accepted</string>
    <string name="notify_no_friend_title">No Friend</string>
    <string name="notify_no_friend_msg">you were removed from a friend list!</string>
    <string name="notify_new_challenge_title">new challenge</string>
    <string name="notify_new_challenge_msg">you have been challenged!</string>
    <string name="notify_game_started_title">Game started</string>
    <string name="notify_game_started_msg">a new game has started</string>
    <string name="notify_your_turn_title">your turn</string>
    <string name="notify_your_turn_compass_msg">%1$s finished the compass-game.</string>
    <string name="notify_your_turn_mentarith_msg">%1$s completed mentalArithmetics.</string>
    <string name="notify_your_turn_steps_game_msg">%1$s completed the steps-game.</string>
    <string name="notify_your_turn_tic_tac_toe_msg">It is your turn in TicTacToe against %1$s.</string>
    <string name="notify_game_ended_title">Game ended</string>
    <string name="notify_game_ended_msg">A game of %1$s against %2$s has ended.</string>
</resources>