<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="1dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="@+id/button_challenge_decl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_challenge_acc"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/invite_msg"
        app:layout_constraintEnd_toStartOf="@+id/button_challenge_acc"
        app:layout_constraintStart_toEndOf="@+id/profile_pic" />

    <TextView
        android:id="@+id/invite_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_msg_placeholder"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_challenge_acc"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_challenge_acc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button_challenge_acc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_challenge_decl"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_challenge_decl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_challenge_decl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>