<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/own_profile_pic"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D8D7D7"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/enemy_profile_pic"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="#FFD8D7D7"
        android:padding="1dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/own_vs_enemy_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/player_names_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/enemy_profile_pic"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/own_profile_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_type"
        app:layout_constraintBottom_toTopOf="@+id/whos_turn"
        app:layout_constraintEnd_toStartOf="@+id/enemy_profile_pic"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/own_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/own_vs_enemy_name"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/whos_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/your_turn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enemy_profile_pic"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/own_profile_pic" />

</androidx.constraintlayout.widget.ConstraintLayout>